Change signal parameter names in GdkWindow to be valid C identifiers

https://bugzilla.gnome.org/show_bug.cgi?id=679228